// This RPC is only used by the proprietary user-daemon and not the OSS one.

syntax = "proto3";

package telepresence.userdaemon;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "rpc/common/errors.proto";

option go_package = "github.com/telepresenceio/telepresence/rpc/v2/userdaemon";

service SystemA {
  // ReportAvailableServices sends a list of services that the daemon has access to.
  //
  // This RPC is only used by the proprietary user-daemon and not the OSS one.
  rpc ReportAvailableServices(stream AvailableServicesRequest) returns (google.protobuf.Empty);

  // GetNamespacesToWatch returns a list of namespaces that the user daemon should watch for workloads that can be
  // intercepted based on a list of namespaces that the user has access to.
  //
  // This RPC is only used by the proprietary user-daemon and not the OSS one.
  rpc GetNamespacesToWatch(NamespacesToWatchRequest) returns (NamespacesToWatchResponse);

  // ResolveInterceptIngressInfo gets the ingress information that the daemon should use to create the preview url
  // associated with an intercept
  rpc ResolveIngressInfo(IngressInfoRequest) returns (IngressInfoResponse);

  // ReportAvailableNamespaces
  rpc ReportAvailableNamespaces(stream AvailableNamespacesRequest) returns (google.protobuf.Empty);

  // ReportInterceptCreation allows the proprietary user-daemon to report intercept creation once the intercept command
  // has completed
  rpc ReportInterceptCreation(InterceptCreationResult) returns (google.protobuf.Empty);

  // GetSavedIntercept allows the proprietary user-daemon to retrieve a saved intercept so that it can instantiate it
  rpc GetSavedIntercept(GetSavedInterceptRequest) returns (SavedIntercept);
}

// AvailableServicesRequest contains a list of services that can be intercepted by the daemon
message AvailableServicesRequest {
  DaemonInfo daemon_info = 1;
  repeated Service available_services = 2;
}

// Service represents a Kubernetes service
message Service {
  // uid corresponds to the Kubernetes service's metadata.uid
  string uid = 1;
  string name = 2;
  string namespace = 3;
  repeated Port ports = 4;
  // Most of the time, we'll get only 1 workload, but since we want to be able to eventually inform the user about the
  // edge case of having multiple workloads behind a service without needing to update the pro daemon version, the
  // information should be provided as a list and the UI will display the error when it's ready to do so
  repeated Workload workloads = 5;
}

// Workload represents a Kubernetes workload (deployment, stateful set, replica set, ...)
message Workload {
  string uid = 1;
  string kind = 2;
  string name = 3;
}

message Port {
  string name = 1;
  int32 port = 2;
}

message NamespacesToWatchRequest {
  DaemonInfo daemon_info = 1;
  repeated Namespace namespaces = 2;
}

// IngressInfoRequest represents the intercept properties required to resolve ingress info
message IngressInfoRequest {
  // The service uid defined in the service's metadata
  string service_uid = 1;

  // The service name
  string service_name = 2;

  // The port name as defined in the service specs
  string service_port_identifier = 3;

  // The port value as defined in the service specs
  int32 service_port = 4;

  // The namespace in which the intercept takes place
  string namespace = 5;
}

// IngressInfoResponse represents the ingress properties required to configure a preview url
message IngressInfoResponse {
  // The layer-3 host
  string host = 1;

  // The layer-4 port
  int32 port = 2;

  // Whether or not to use TLS on the port
  bool use_tls = 3;

  // The layer-5 host
  string l5host = 4;
}

message NamespacesToWatchResponse {
  repeated Namespace namespaces = 1;
}

// AvailableNamespacesRequest contains a list of namespaces that can be intercepted by the daemon
message AvailableNamespacesRequest {
  DaemonInfo daemon_info = 1;
  repeated Namespace available_namespaces = 2;
}

message Namespace {
  string uid = 1;
  string name = 2;
  bool is_default = 3;
}

// DaemonIdentity identifies a daemon so that System A can reach it back
message DaemonInfo {
  string daemon_id = 1;
  string workstation_name = 2;
  string kube_context_name = 3;
  string session_id = 4;
}

// InterceptCreationResult represents the result of an intercept execution
message InterceptCreationResult {
  // Telepresence CLI version
  string telepresence_cli_version = 1;

  // Telepresence User Daemon version
  string telepresence_user_daemon_version = 2;

  // Time at which the command execution started
  google.protobuf.Timestamp started_at = 3;

  // Time at which the command execution completed
  google.protobuf.Timestamp ended_at = 4;

  // Base name of the intercept, as represented by `telepresence intercept <intercept_base_name>`
  string intercept_base_name = 5;

  // List of arguments that were passed to the command and should be of format "--argument-name=argument value"
  repeated string intercept_parameters = 6;

  // Exec command and arguments that can optionally be passed
  string intercept_exec_command = 7;

  // InterceptError resulting from the execution
  telepresence.common.InterceptError intercept_error = 8;

  // Error text message if any
  string intercept_error_text = 9;

  // Cluster ID in which the intercept was executed
  string cluster_id = 10;

  // Namespace in which the intercept was executed. Must be the same as the `--namespace` argument if passed.
  string cluster_namespace = 11;
}

// GetSavedInterceptRequest represents a request to get a specific InterceptDefinition by its name
message GetSavedInterceptRequest {
  // Name of the intercept definition to look up
  string name = 1;
}

// SavedIntercept represents a set of properties that can be put back together to instantiate an intercept
message SavedIntercept {
  // Telepresence CLI version
  string telepresence_cli_version = 1;

  // Telepresence User Daemon version
  string telepresence_user_daemon_version = 2;

  // Base name of the intercept, as represented by `telepresence intercept <intercept_base_name>`
  string intercept_base_name = 3;

  // List of arguments that were passed to the command and should be of format "--argument-name=argument value"
  string intercept_parameters = 4;

  // Exec command and arguments that can optionally be passed
  string intercept_exec_command = 5;
}
